# TrucoCareca

./: README.md
truco-careca-js/: game.js  index.html  index.js  styles.css  types.js  utils.js
truco-careca-js/states/: pick_up_seats.js  waiting_for_players.js  waiting_for_ready.js
truco-careca-server/: Cargo.toml  brainstorm.md
truco-careca-server/src/: game.rs  main.rs
truco-careca-server/src/game/: connection.rs  game_event.rs  player.rs  state_machine.rs
truco-careca-server/src/game/factories/: deck_factory.rs  mod.rs
truco-careca-server/src/game/models/: deck_of_cards.rs  mod.rs  types.rs
truco-careca-server/src/game/states/: game_started_state.rs  match_point_state.rs  mod.rs  pick_up_seats_state.rs  player_turn_state.rs  start_game_state.rs  start_round_state.rs  waiting_for_player_state.rs  waiting_for_ready_state.rs
