[package]
name = "truco-careca-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
futures-util = "0.3.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
strum = "0.24"
strum_macros = "0.24"
queues = "1.0.2"

[build]
rustflags = ["--sysroot", "<path-to-your-rust-sysroot>"]

